load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "algorithm",
    srcs = ["algorithm.cpp"],
    hdrs = ["algorithm.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
)

cc_library(
    name = "display",
    srcs = ["display.cpp"],
    hdrs = ["display.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = ["@qt//:qt_core"],
)

cc_library(
    name = "interface",
    hdrs = ["interface.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = ["@qt//:qt_core"],
)

cc_library(
    name = "network",
    srcs = ["network.cpp"],
    hdrs = ["network.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = [
        "@qt//:qt_core",
        "@qt//:qt_network",
    ],
)

cc_library(
    name = "ranges",
    srcs = ["ranges.cpp"],
    hdrs = ["ranges.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
)

cc_library(
    name = "strongtype",
    srcs = ["strongtype.cpp"],
    hdrs = ["strongtype.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = ["@qt//:qt_core"],
)

cc_library(
    name = "toxcoreerrorparser",
    srcs = ["toxcoreerrorparser.cpp"],
    hdrs = ["toxcoreerrorparser.h"],
    tags = ["qt"],
    visibility = ["//qtox:__subpackages__"],
    deps = [
        "//c-toxcore",
        "@qt//:qt_core",
        "@qt//:qt_network",
    ],
)

